Bug 1555786 - Get inner window from doc directly for resize observer. r=smaug

In Notify(), we should guarantee that the inner window we get is for the
document, and avoid using null outer window pointer.

Differential Revision: https://phabricator.services.mozilla.com/D35727

--HG--
extra : moz-landing-system : lando